--- a/index.html
+++ b/index.html
@@ -4,18 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="hero">
+    <header>
       <div>
         <h1>We Produce the Legacy of Excellence</h1>
-        <button>Contact us</button>
-        <p></p>
+        <div class="button">Contact us</div>
+      </div>
+    </header>
+    <section>
+      <h2>About</h2>
+      <div>
+        <img src="images/img_2.png" alt="batiment" />
+        <div>
+          <h3>Improvement Through Meaningful Innovation</h3>
+          <p>
+            Commited to provide superior consultancy and building trusted
+            services through the newest innovations in the industries with
+            consideration for the environment. Dedicated to sustainable and
+            economical capacity and value the customer satisfaction. We
+            accomplish great things by working efficiently and with excellence.
+          </p>
+        </div>
+        <div>
+          <img src="images/img_3.png" alt="openspace" />
+          <div>
+            <h3>Integrity, Synergy, Quality and Value</h3>
+            <p>
+              Conduct through strong standards and transparency. Operate as a
+              cohesive team and collaborate to provide a key to success and
+              pursuit of improvement that our clients expect. We are capable to
+              complete management, consultancy, construction works and consider
+              that understanding and appreciation the client requirements is a
+              real road to success.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
     <section>
-      <h2>About</h2>
-      <div></div>
+      <h2>Industries</h2>
+      <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <img src="" alt="" />
+        <div>Watch out</div>
+      </div>
     </section>
   </body>
 </html>
