--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="button">Contact us</div>
       </div>
     </header>
-    <section>
+    <section class="about">
       <h2>About</h2>
       <div>
         <img src="images/img_2.png" alt="batiment" />
