--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2>About</h2>
       <div>
         <img src="images/img_2.png" alt="batiment" />
-        <div>
+        <div class="side-text">
           <h3>Improvement Through Meaningful Innovation</h3>
           <p>
             Commited to provide superior consultancy and building trusted
@@ -27,9 +27,10 @@
             accomplish great things by working efficiently and with excellence.
           </p>
         </div>
-        <div>
-          <img src="images/img_3.png" alt="openspace" />
-          <div>
+      </div>
+      <div>
+        <img src="images/img_3.png" alt="openspace" />
+          <div class="side-text">
             <h3>Integrity, Synergy, Quality and Value</h3>
             <p>
               Conduct through strong standards and transparency. Operate as a
@@ -43,14 +44,34 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="industries">
       <h2>Industries</h2>
-      <div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+      <div class="picto-row">
+        <div class="picto-items">
+          <div>
+            <img src="images/eclair.svg" alt="eclair">
+          </div>
+          <span>Energy</span>
+        </div>
+        <div class="picto-items">
+          <div>
+            <img src="images/batiment.svg" alt="batiment">
+          </div>
+          <span>Construction</span>
+        </div>
+        <div class="picto-items">
+          <div>
+          <img src="images/port.svg" alt="port services">
+        </div>
+        <span>Port Services</span>
+        </div>
+        <div class="picto-items">
+          <div>
+          <img src="images/ordinateur.svg" alt="ordinateur">
+        </div>
+        <span>Information Technology</span>
+        </div> 
+    </div>
     </section>
     <section>
       <div>
