--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&family=Quicksand:wght@400;500;600;700&family=Rubik:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -15,7 +18,7 @@
     </header>
     <section class="about">
       <h2>About</h2>
-      <div>
+      <div class="about-item">
         <img src="images/img_2.png" alt="batiment" />
         <div class="side-text">
           <h3>Improvement Through Meaningful Innovation</h3>
@@ -28,7 +31,7 @@
           </p>
         </div>
       </div>
-      <div>
+      <div class="about-item">
         <img src="images/img_3.png" alt="openspace" />
           <div class="side-text">
             <h3>Integrity, Synergy, Quality and Value</h3>
@@ -73,9 +76,9 @@
         </div> 
     </div>
     </section>
-    <section>
+    <section class="third-row">
       <div>
-        <img src="" alt="" />
+        <img src="images/img_4.png" alt="batiment" />
         <div>Watch out</div>
       </div>
     </section>
