--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
     </div>
     </section>
     <section class="third-row">
-      <div>
-        <img src="images/img_4.png" alt="batiment" />
-        <div>Watch out</div>
+      <div class="third-row__img-box">
+        <img class="third-row__img-box_img" src="images/img_4.png" alt="batiment" />
+        <div class="play-box">
+          <img class="play-box_img" src="images/play.svg" alt="bouton play">
+          <span class="play-box_btn">Watch our video</span>
+        </div>
       </div>
     </section>
   </body>
